--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.case</groupId>
 	<artifactId>readingIsGood</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>readingIsGood</name>
 	<description>Online books retail firm app</description>
 	<properties>
