--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<java.version>11</java.version>
 		<mapstruct.version>1.4.1.Final</mapstruct.version>
 		<junit.version>4.12</junit.version>
+		<swagger.version>3.0.0</swagger.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +67,11 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>${swagger.version}</version>
 		</dependency>
 	</dependencies>
 
