--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,6 +26,9 @@ spring:
       use-new-id-generator-mappings: true
     open-in-view: false
     generate-ddl: true
+  sql:
+    init:
+      mode: always
 logging:
   file:
     path: c:\log\getir
