--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>11</java.version>
 		<mapstruct.version>1.4.1.Final</mapstruct.version>
 		<junit.version>4.12</junit.version>
-		<swagger.version>3.0.0</swagger.version>
+		<springdoc.openapi.version>1.6.4</springdoc.openapi.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,10 +68,11 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-boot-starter</artifactId>
-			<version>${swagger.version}</version>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 	</dependencies>
 
