--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,9 @@ spring:
   sql:
     init:
       mode: always
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 logging:
   file:
     path: c:\log\getir
