--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,18 +5,11 @@ spring:
     allow-bean-definition-overriding: true
   application:
     name: readingIsGood
-  security:
-    filter:
-      order: 5
-  jmx:
-    enabled: false
   datasource:
     url: jdbc:postgresql://postgres-db:5432/getir
     username: getir
     password: getir
-    hikari:
-      maximum-pool-size: 20
-      minimum-idle: 4
+    initialization-mode: always
   jpa:
     properties:
       org.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -24,14 +17,9 @@ spring:
     show-sql: true
     hibernate:
       use-new-id-generator-mappings: true
+      ddl-auto: create
     open-in-view: false
     generate-ddl: true
-  sql:
-    init:
-      mode: always
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
 logging:
   file:
     path: c:\log\getir
